Akissda Dasturchidan O'zgarishlar

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -13,6 +13,8 @@
 
     <link href="akiss.styles.css" rel="stylesheet" />
 
+    <link rel="stylesheet" href="">
+
   <!-- Vendor CSS Files -->
     <link href="vendor/aos/aos.css" rel="stylesheet">
     <link href="vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
